<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="spend_smarter_nsave_more">Spend Smarter\nSave More</string>
    <string name="get_started">Get Started</string>
    <string name="all_downloader">All Downloader</string>
    <string name="home">Home</string>
    <string name="statistics">Statistics</string>
    <string name="wallet">Wallet</string>
    <string name="profile">Profile</string>
    <string name="banner">Banner</string>
    <string name="codewithsneak">CodeWithSneak</string>
    <string name="good_afternoon">Good Afternoon</string>
    <string name="total_balance">Total Balance</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="recent_transactions">Recent Transactions</string>
    <string name="see_all">See All</string>
    <string name="back">Back</string>
    <string name="more_options">More</string>
    <string name="name">NAME</string>
    <string name="amount">AMOUNT</string>
    <string name="date">DATE</string>
    <string name="title">TITLE</string>
    <string name="category">Category</string>
    <string name="groceries">Groceries</string>
    <string name="categoryEg">Food, Transport, Entertainment</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="entry">Entry</string>
    <string name="update_transaction">Update Transaction</string>
</resources>